# chatbot

./: .gitignore  README.md  linebot.py  linebot_demo.py  linebot_main.py  linebot_server.py  pyproject.toml  telegram_Server.py  telegram_demo.py
database_for_bot/: .gitignore  __init__.py  cassandra_initial.py
ecPay_api/: __init__.py  item.py  main.py  params.py
linebot_src/: __init__.py  answer_question.py  linebot_config.py
openai_api/: __init__.py  gpt_turbo.py
telegram_src/: __init__.py  telegram_bot_config.py  telegram_openai.py  telegram_register.py  typedef_for_bot.py
