[tool.poetry]
name = "linebot"
version = "0.1.0"
description = "LineBot Develope"
authors = ["Marcus_Lin <marcus.lin@e-elements.com.tw>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
